--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.0",
     "bootstrap": "4.1.3",
     "css-loader": "^3.4.2",
     "express": "4.16.4",
     "node-sass": "^4.13.1",
+    "react": "^17.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-dev-server": "3.11.2"
+  },
+  "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "path": "^0.12.7",
+    "react-dom": "^17.0.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
