--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Front-End challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "npm install && node index.js",
     "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@webpack-cli/serve": "^1.6.0",
     "bootstrap": "4.1.3",
     "css-loader": "^3.4.2",
     "express": "4.16.4",
+    "jest": "^27.3.1",
     "node-sass": "^4.13.1",
     "react": "^17.0.2",
     "sass-loader": "^8.0.2",
@@ -27,6 +29,7 @@
     "babel-loader": "^8.2.3",
     "path": "^0.12.7",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   }
