--- a/package.json
+++ b/package.json
@@ -6,26 +6,37 @@
   "scripts": {
     "test": "jest",
     "start": "npm install && node index.js",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@types/jest": "^27.0.2",
     "@webpack-cli/serve": "^1.6.0",
+    "babel-jest": "^27.3.1",
     "bootstrap": "4.1.3",
     "css-loader": "^3.4.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "express": "4.16.4",
     "jest": "^27.3.1",
     "node-sass": "^4.13.1",
     "react": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "path": "^0.12.7",
     "react-dom": "^17.0.2",
