--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "lint": "eslint"
   },
-  "author": "",
+  "author": "Lisa Milena Fernández Ayala",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.16.0",
@@ -32,15 +32,13 @@
     "react": "^17.0.2",
     "react-test-renderer": "^17.0.2",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack-dev-server": "3.11.2"
+    "style-loader": "^1.1.3"
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "babel-loader": "^8.2.3",
     "path": "^0.12.7",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   }
